bridging/LabSoundHelper.h

void SampledAudioNode_schedule4(int nodeId, double when, double grainOffset, double grainDuration, int loopCount);
void SampledAudioNode_clearSchedules(int nodeId);
int SampledAudioNode_getCursor(int index);
int SampledAudioNode_playbackRate(int index);
int SampledAudioNode_detune(int index);
/// AudioBus

int decodeAudioData(const char *file);
int decodeAudioDataAsync(const char *file);
int decodeAudioDataHasCheck(int busIndex);
int AudioBus_numberOfChannels(int busIndex);
int AudioBus_length(int busIndex);
float AudioBus_sampleRate(int busIndex);
void AudioBus_zero(int busIndex);
void AudioBus_clearSilentFlag(int busIndex);
void AudioBus_scale(int busIndex, float scale);
void AudioBus_reset(int busIndex);
int AudioBus_isSilent(int busIndex);
int AudioBus_isFirstTime(int busIndex);
void AudioBus_setSampleRate(int busIndex, float sampleRate);
void releaseAudioBus(int index);
/// GainNode

int createGain(AudioContext* context);
int GainNode_gain(int nodeId);
/// RecorderNode

int createRecorderNode(AudioContext* context, int channels, float sampleRate);
/// AnalyserNode


int createAnalyserNode(AudioContext* context);
int createAnalyserNodeFftSize(AudioContext* context, int fftSize);
void AnalyserNode_setFftSize(int nodeIndex, AudioContext* context, int fftSize);
int AnalyserNode_fftSize(int nodeIndex);
int AnalyserNode_frequencyBinCount(int nodeIndex);
void AnalyserNode_setMinDecibels(int nodeIndex, double k);
int AnalyserNode_minDecibels(int nodeIndex);