lib/generated_bindings.dart


  void SampledAudioNode_schedule4(
    int nodeId,
    double when,
    double grainOffset,
    double grainDuration,
    int loopCount,
  ) {
    return _SampledAudioNode_schedule4(
      nodeId,
      when,
      grainOffset,
      grainDuration,
      loopCount,
    );
  }

  late final _SampledAudioNode_schedule4_ptr =
      _lookup<ffi.NativeFunction<_c_SampledAudioNode_schedule4>>(
          'SampledAudioNode_schedule4');
  late final _dart_SampledAudioNode_schedule4 _SampledAudioNode_schedule4 =
      _SampledAudioNode_schedule4_ptr.asFunction<
          _dart_SampledAudioNode_schedule4>();

  void SampledAudioNode_clearSchedules(
    int nodeId,
  ) {
    return _SampledAudioNode_clearSchedules(
      nodeId,
    );
  }

  late final _SampledAudioNode_clearSchedules_ptr =
      _lookup<ffi.NativeFunction<_c_SampledAudioNode_clearSchedules>>(
          'SampledAudioNode_clearSchedules');
  late final _dart_SampledAudioNode_clearSchedules
      _SampledAudioNode_clearSchedules = _SampledAudioNode_clearSchedules_ptr
          .asFunction<_dart_SampledAudioNode_clearSchedules>();

  int SampledAudioNode_getCursor(
    int index,
  ) {
    return _SampledAudioNode_getCursor(
      index,
    );
  }

  late final _SampledAudioNode_getCursor_ptr =
      _lookup<ffi.NativeFunction<_c_SampledAudioNode_getCursor>>(
          'SampledAudioNode_getCursor');
  late final _dart_SampledAudioNode_getCursor _SampledAudioNode_getCursor =
      _SampledAudioNode_getCursor_ptr.asFunction<
          _dart_SampledAudioNode_getCursor>();

  int SampledAudioNode_playbackRate(
    int index,
  ) {
    return _SampledAudioNode_playbackRate(
      index,
    );
  }

  late final _SampledAudioNode_playbackRate_ptr =
      _lookup<ffi.NativeFunction<_c_SampledAudioNode_playbackRate>>(
          'SampledAudioNode_playbackRate');
  late final _dart_SampledAudioNode_playbackRate
      _SampledAudioNode_playbackRate = _SampledAudioNode_playbackRate_ptr
          .asFunction<_dart_SampledAudioNode_playbackRate>();

  int SampledAudioNode_detune(
    int index,
  ) {
    return _SampledAudioNode_detune(
      index,
    );
  }

  late final _SampledAudioNode_detune_ptr =
      _lookup<ffi.NativeFunction<_c_SampledAudioNode_detune>>(
          'SampledAudioNode_detune');
  late final _dart_SampledAudioNode_detune _SampledAudioNode_detune =
      _SampledAudioNode_detune_ptr.asFunction<_dart_SampledAudioNode_detune>();

  /// AudioBus
  int decodeAudioData(
    ffi.Pointer<ffi.Int8> file,
  ) {
    return _decodeAudioData(
      file,
    );
  }

  late final _decodeAudioData_ptr =
      _lookup<ffi.NativeFunction<_c_decodeAudioData>>('decodeAudioData');
  late final _dart_decodeAudioData _decodeAudioData =
      _decodeAudioData_ptr.asFunction<_dart_decodeAudioData>();

  int decodeAudioDataAsync(
    ffi.Pointer<ffi.Int8> file,
  ) {
    return _decodeAudioDataAsync(
      file,
    );
  }

  late final _decodeAudioDataAsync_ptr =
      _lookup<ffi.NativeFunction<_c_decodeAudioDataAsync>>(
          'decodeAudioDataAsync');
  late final _dart_decodeAudioDataAsync _decodeAudioDataAsync =
      _decodeAudioDataAsync_ptr.asFunction<_dart_decodeAudioDataAsync>();

  int decodeAudioDataHasCheck(
    int busIndex,
  ) {
    return _decodeAudioDataHasCheck(
      busIndex,
    );
  }

  late final _decodeAudioDataHasCheck_ptr =
      _lookup<ffi.NativeFunction<_c_decodeAudioDataHasCheck>>(
          'decodeAudioDataHasCheck');
  late final _dart_decodeAudioDataHasCheck _decodeAudioDataHasCheck =
      _decodeAudioDataHasCheck_ptr.asFunction<_dart_decodeAudioDataHasCheck>();

  int AudioBus_numberOfChannels(
    int busIndex,
  ) {
    return _AudioBus_numberOfChannels(
      busIndex,
    );
  }

  late final _AudioBus_numberOfChannels_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_numberOfChannels>>(
          'AudioBus_numberOfChannels');
  late final _dart_AudioBus_numberOfChannels _AudioBus_numberOfChannels =
      _AudioBus_numberOfChannels_ptr.asFunction<
          _dart_AudioBus_numberOfChannels>();

  int AudioBus_length(
    int busIndex,
  ) {
    return _AudioBus_length(
      busIndex,
    );
  }

  late final _AudioBus_length_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_length>>('AudioBus_length');
  late final _dart_AudioBus_length _AudioBus_length =
      _AudioBus_length_ptr.asFunction<_dart_AudioBus_length>();

  double AudioBus_sampleRate(
    int busIndex,
  ) {
    return _AudioBus_sampleRate(
      busIndex,
    );
  }

  late final _AudioBus_sampleRate_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_sampleRate>>(
          'AudioBus_sampleRate');
  late final _dart_AudioBus_sampleRate _AudioBus_sampleRate =
      _AudioBus_sampleRate_ptr.asFunction<_dart_AudioBus_sampleRate>();

  void AudioBus_zero(
    int busIndex,
  ) {
    return _AudioBus_zero(
      busIndex,
    );
  }

  late final _AudioBus_zero_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_zero>>('AudioBus_zero');
  late final _dart_AudioBus_zero _AudioBus_zero =
      _AudioBus_zero_ptr.asFunction<_dart_AudioBus_zero>();

  void AudioBus_clearSilentFlag(
    int busIndex,
  ) {
    return _AudioBus_clearSilentFlag(
      busIndex,
    );
  }

  late final _AudioBus_clearSilentFlag_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_clearSilentFlag>>(
          'AudioBus_clearSilentFlag');
  late final _dart_AudioBus_clearSilentFlag _AudioBus_clearSilentFlag =
      _AudioBus_clearSilentFlag_ptr.asFunction<
          _dart_AudioBus_clearSilentFlag>();

  void AudioBus_scale(
    int busIndex,
    double scale,
  ) {
    return _AudioBus_scale(
      busIndex,
      scale,
    );
  }

  late final _AudioBus_scale_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_scale>>('AudioBus_scale');
  late final _dart_AudioBus_scale _AudioBus_scale =
      _AudioBus_scale_ptr.asFunction<_dart_AudioBus_scale>();

  void AudioBus_reset(
    int busIndex,
  ) {
    return _AudioBus_reset(
      busIndex,
    );
  }

  late final _AudioBus_reset_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_reset>>('AudioBus_reset');
  late final _dart_AudioBus_reset _AudioBus_reset =
      _AudioBus_reset_ptr.asFunction<_dart_AudioBus_reset>();

  int AudioBus_isSilent(
    int busIndex,
  ) {
    return _AudioBus_isSilent(
      busIndex,
    );
  }

  late final _AudioBus_isSilent_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_isSilent>>('AudioBus_isSilent');
  late final _dart_AudioBus_isSilent _AudioBus_isSilent =
      _AudioBus_isSilent_ptr.asFunction<_dart_AudioBus_isSilent>();

  int AudioBus_isFirstTime(
    int busIndex,
  ) {
    return _AudioBus_isFirstTime(
      busIndex,
    );
  }

  late final _AudioBus_isFirstTime_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_isFirstTime>>(
          'AudioBus_isFirstTime');
  late final _dart_AudioBus_isFirstTime _AudioBus_isFirstTime =
      _AudioBus_isFirstTime_ptr.asFunction<_dart_AudioBus_isFirstTime>();

  void AudioBus_setSampleRate(
    int busIndex,
    double sampleRate,
  ) {
    return _AudioBus_setSampleRate(
      busIndex,
      sampleRate,
    );
  }

  late final _AudioBus_setSampleRate_ptr =
      _lookup<ffi.NativeFunction<_c_AudioBus_setSampleRate>>(
          'AudioBus_setSampleRate');
  late final _dart_AudioBus_setSampleRate _AudioBus_setSampleRate =
      _AudioBus_setSampleRate_ptr.asFunction<_dart_AudioBus_setSampleRate>();

  void releaseAudioBus(
    int index,
  ) {
    return _releaseAudioBus(
      index,
    );
  }

  late final _releaseAudioBus_ptr =
      _lookup<ffi.NativeFunction<_c_releaseAudioBus>>('releaseAudioBus');
  late final _dart_releaseAudioBus _releaseAudioBus =
      _releaseAudioBus_ptr.asFunction<_dart_releaseAudioBus>();

  /// GainNode
  int createGain(
    ffi.Pointer<ffi.Int32> context,
  ) {
    return _createGain(
      context,
    );
  }

  late final _createGain_ptr =
      _lookup<ffi.NativeFunction<_c_createGain>>('createGain');
  late final _dart_createGain _createGain =
      _createGain_ptr.asFunction<_dart_createGain>();

  int GainNode_gain(
    int nodeId,
  ) {
    return _GainNode_gain(
      nodeId,
    );
  }

  late final _GainNode_gain_ptr =
      _lookup<ffi.NativeFunction<_c_GainNode_gain>>('GainNode_gain');
  late final _dart_GainNode_gain _GainNode_gain =
      _GainNode_gain_ptr.asFunction<_dart_GainNode_gain>();

  /// RecorderNode
  int createRecorderNode(
    ffi.Pointer<ffi.Int32> context,
    int channels,
    double sampleRate,
  ) {
    return _createRecorderNode(
      context,
      channels,
      sampleRate,
    );
  }

  late final _createRecorderNode_ptr =
      _lookup<ffi.NativeFunction<_c_createRecorderNode>>('createRecorderNode');
  late final _dart_createRecorderNode _createRecorderNode =
      _createRecorderNode_ptr.asFunction<_dart_createRecorderNode>();

  /// AnalyserNode
  int createAnalyserNode(
    ffi.Pointer<ffi.Int32> context,
  ) {
    return _createAnalyserNode(
      context,
    );
  }

  late final _createAnalyserNode_ptr =
      _lookup<ffi.NativeFunction<_c_createAnalyserNode>>('createAnalyserNode');
  late final _dart_createAnalyserNode _createAnalyserNode =
      _createAnalyserNode_ptr.asFunction<_dart_createAnalyserNode>();

  int createAnalyserNodeFftSize(
    ffi.Pointer<ffi.Int32> context,
    int fftSize,
  ) {
    return _createAnalyserNodeFftSize(
      context,
      fftSize,
    );
  }

  late final _createAnalyserNodeFftSize_ptr =
      _lookup<ffi.NativeFunction<_c_createAnalyserNodeFftSize>>(
          'createAnalyserNodeFftSize');
  late final _dart_createAnalyserNodeFftSize _createAnalyserNodeFftSize =
      _createAnalyserNodeFftSize_ptr
          .asFunction<_dart_createAnalyserNodeFftSize>();

  void AnalyserNode_setFftSize(
    int nodeIndex,
    ffi.Pointer<ffi.Int32> context,
    int fftSize,
  ) {
    return _AnalyserNode_setFftSize(
      nodeIndex,
      context,
      fftSize,
    );
  }

  late final _AnalyserNode_setFftSize_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_setFftSize>>(
          'AnalyserNode_setFftSize');
  late final _dart_AnalyserNode_setFftSize _AnalyserNode_setFftSize =
      _AnalyserNode_setFftSize_ptr.asFunction<_dart_AnalyserNode_setFftSize>();

  int AnalyserNode_fftSize(
    int nodeIndex,
  ) {
    return _AnalyserNode_fftSize(
      nodeIndex,
    );
  }

  late final _AnalyserNode_fftSize_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_fftSize>>(
          'AnalyserNode_fftSize');
  late final _dart_AnalyserNode_fftSize _AnalyserNode_fftSize =
      _AnalyserNode_fftSize_ptr.asFunction<_dart_AnalyserNode_fftSize>();

  int AnalyserNode_frequencyBinCount(
    int nodeIndex,
  ) {
    return _AnalyserNode_frequencyBinCount(
      nodeIndex,
    );
  }

  late final _AnalyserNode_frequencyBinCount_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_frequencyBinCount>>(
          'AnalyserNode_frequencyBinCount');
  late final _dart_AnalyserNode_frequencyBinCount
      _AnalyserNode_frequencyBinCount = _AnalyserNode_frequencyBinCount_ptr
          .asFunction<_dart_AnalyserNode_frequencyBinCount>();

  void AnalyserNode_setMinDecibels(
    int nodeIndex,
    double k,
  ) {
    return _AnalyserNode_setMinDecibels(
      nodeIndex,
      k,
    );
  }

  late final _AnalyserNode_setMinDecibels_ptr =
      _lookup<ffi.NativeFunction<_c_AnalyserNode_setMinDecibels>>(
          'AnalyserNode_setMinDecibels');
  late final _dart_AnalyserNode_setMinDecibels _AnalyserNode_setMinDecibels =
      _AnalyserNode_setMinDecibels_ptr.asFunction<
          _dart_AnalyserNode_setMinDecibels>();

  int AnalyserNode_minDecibels(
    int nodeIndex,
  ) {
    return _AnalyserNode_minDecibels(
      nodeIndex,
    );
  }
